Fix page with large version command
An horizontal scrollbar now appears when the version command is overflowing the page width.

Fixed #3322.

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -23,16 +23,20 @@ a {
   // Icons are 50x50, so this adds another 10 pixels
   min-height: 60px;
 }
+
 .product-logo {
   float: left;
   margin-right: .5em;
 }
+
 .bg-light {
   background-color: #f8f9fa !important;
 }
+
 .txt-linethrough {
   text-decoration: line-through;
 }
+
 .card {
   position: relative;
   display: -ms-flexbox;
@@ -46,6 +50,7 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
+
 .card-body {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
@@ -71,4 +76,8 @@ a {
     margin-left: -2.1rem;
     margin-bottom: -.3rem;
   }
+}
+
+#version-command {
+  overflow: scroll;
 }
